adjustments to builtin functions